@@ -1,3 +1,12 @@
+2008-10-20  Xavier Queralt  <xqueralt@flumotion.com>
+
+	reviewed by: Johan Dahlin  <johan@flumotion.com>
+
+	* flumotion/admin/admin.py:
+	* flumotion/admin/gtk/adminwindow.py:
+	Free the old connection when switching managers.
+	Fixes #758
+
 2008-10-15  Jan Urbanski  <jurbanski@flumotion.com>
 
 	* common/Makefile.am:
